add feature cart and some styling

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,27 @@
 
+.nav ul{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin-bottom: 30px;
+}
 
+.nav ul li {
+    text-align: center;
+    flex-grow: 1;
+    border-radius: 25px;
+    font-size: 1em;
+    background: rgba(21, 118, 110);
+    color: #223243;
+    padding: 10px 10px;
+    margin: 10px;
+    font-weight: 500;
+    border: #00dfc4;
+    cursor: pointer;
+
+}
+
+/*
 .nav ul{
     display: flex;
     justify-content: space-around;
@@ -9,4 +31,4 @@
 
 .nav ul li{
     align-items: center;
-}
+}*/
