--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,18 @@
+button {
+    background-color: rgba(21, 118, 110);
+    margin-right: 20px;
+    border-radius: 25px;
+}
 body{
-background-color: beige;
+    background-color: rgba(35, 222, 175)
+}
+
+.head-line {
+    font-weight: bold;
+}
+
+table {
+    border-collapse: separate; /* Trennt die Zellen voneinander */
+    border-spacing: 20px 5px; /* Fügt einen Rahmen um die Zellen hinzu */
+    padding: 8px; /* Fügt Innenabstand zu den Zellen hinzu */
 }
