--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@ body{
 }
 
 table {
-    border-collapse: separate; /* Trennt die Zellen voneinander */
-    border-spacing: 20px 5px; /* Fügt einen Rahmen um die Zellen hinzu */
-    padding: 8px; /* Fügt Innenabstand zu den Zellen hinzu */
+    border-collapse: separate;
+    border-spacing: 20px 5px;
+    padding: 8px;
 }
