add some styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@ button {
     border-radius: 25px;
 }
 body{
-    background-color: rgba(35, 222, 175)
+    background-color: rgba(35, 222, 175);
 }
 
 .head-line {
