--- a/frontend/src/components/Order/ViewOrders.css
+++ b/frontend/src/components/Order/ViewOrders.css
@@ -1,28 +1,18 @@
-/*
-.order-display {
 
-    margin: 20px auto;!* Zentrieren der Tabelle horizontal *!
-    border-collapse: collapse; !* Zusammenführen von Zellengrenzen *!
-}
-
-.head-line td {
-    text-align: left; !* Text von links nach rechts ausrichten *!
-    direction: rtl; !* Zelleninhalt von rechts nach links anordnen *!
-}*/
 .button-container {
-    text-align: center; /* Zentrieren des Inhalts horizontal */
+    text-align: center;
 }
 
 .order-display {
-    margin: 20px auto; /* Zentrieren der Tabelle horizontal */
-    border-collapse: collapse; /* Zusammenführen von Zellengrenzen */
+    margin: 20px auto;
+    border-collapse: collapse;
 }
 
 .head-line td {
-    text-align: left; /* Text von links nach rechts ausrichten */
-    direction: rtl; /* Zelleninhalt von rechts nach links anordnen */
+    text-align: left;
+    direction: rtl;
 }
 
 .order-display td {
-    padding-right: 8px; /* Hinzufügen von Abstand um den Text in den Zellen */
+    padding-right: 8px;
 }
